# anknote

./: .gitignore  .gitmessage  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: Bug.md  Build.md  CI.md  Documentation.md  Experiment.md  Feature.md  Refactor.md  Test.md
.github/PULL_REQUEST_TEMPLATE/: Bug.md  CI.md  Experiment.md  Feature.md
.github/workflows/: build_and_test.yaml  deploy_docs.yaml  docker_build.yaml  linting.yaml  release.yaml
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: changelog.md  configuration.md  contributing.md  gen_ref_pages.py  index.md  installation.md  mkdocs.yml  usage.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/changelog/: index.html
docs/site/configuration/: index.html
docs/site/contributing/: index.html
docs/site/installation/: index.html
docs/site/reference/SUMMARY/: index.html
docs/site/reference/anknote/: index.html
docs/site/reference/anknote/config/: index.html
docs/site/reference/anknote/io/: index.html
docs/site/reference/anknote/io/card/: index.html
docs/site/reference/anknote/io/gather/: index.html
docs/site/reference/anknote/io/write/: index.html
docs/site/reference/anknote/main/: index.html
docs/site/search/: search_index.json
docs/site/usage/: index.html
examples/: config.json
installation/: index.html
reference/SUMMARY/: index.html
reference/anknote/: index.html
reference/anknote/config/: index.html
reference/anknote/io/: index.html
reference/anknote/io/card/: index.html
reference/anknote/io/gather/: index.html
reference/anknote/io/write/: index.html
reference/anknote/main/: index.html
scripts/: setup-git.sh
search/: search_index.json
src/anknote/: __init__.py  config.py  main.py
src/anknote/io/: card.py  gather.py  generate.py  write.py
tests/: __init__.py  test_config.py  test_io.py  test_main.py
usage/: index.html
