[project]
name = "anknote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rayanramoul", email = "r.ramoul@instadeep.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.70.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
]

[project.scripts]
anknote = "anknote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
