[project]
name = "anknote"
version = "0.1.0"
description = "Generate Anki notes with LLMs."
readme = "README.md"
authors = [{ name = "rayanramoul", email = "raysamram@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=6.2.4"]
docs = [
  "mkdocs-autorefs==1.2.0",
  "mkdocs-gen-files==0.5.0",
  "mkdocs-get-deps==0.2.0",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-material==9.5.41",
  "mkdocs-mermaid2-plugin==1.1.1",
  "mkdocs==1.6.1",
  "mkdocstrings-python==1.12.1",
  "mkdocstrings==0.26.2",
  "pymdown-extensions==10.11.2",
  "mkdocs-same-dir",
]
lint = [
  "pre-commit>=4.0.1",
  "mypy>=1.14.1",
  "pandas-stubs>=2.2.3.241126",
  "types-pyyaml>=6.0.12.20241230",
  "types-regex>=2024.11.6.20241221",
  "types-requests>=2.31.0.6",
  "types-tqdm>=4.67.0.20241221",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]

[project.scripts]
anknote = "anknote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
